Fix compiling issue
Signed-off-by: Heng Qian <qianheng@amazon.com>